@@ -7,6 +7,8 @@
   * Ignore blocks generated by the More Block IDs mod, rather than dying
   * Fixed Minecraft data directory detection on a corner case (possibly
     just for people using the Administrator account in XP)
+  * Resolution dialog will show any valid world directory inside the
+    "saves" dir, instead of just those of the form WorldN
 
 Minecraft X-Ray 2.7 Maintenance Branch 8 (2011.01.26)
 
